adicionado api do whatsapp

--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
 
 <body>
 
+    <!-- whats app -->
+    <div id="div_fixa"><a href="whatsapp.php" target="_blank"> <img src="assets/img/api-whatsapp-site.jpg" width="54"></a>
+    </div>
+    
+    <style type="text/css">
+      #div_fixa {
+    
+        position: fixed;
+        margin: 15px;
+        margin-top: 300px;
+        z-index: 5000;
+        bottom: 0px;
+      }
+    </style>
+    <!-- whats app -->
+
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-transparent">
     <div class="container-fluid">
